# esips-portfolio-demos

./: .gitignore  BEGINNER_GUIDE.zh-CN.md  CHANGELOG.md  CLAIMS_MATRIX.md  Makefile  PORTFOLIO_STATUS.json  PORTFOLIO_STATUS.md  README.md  REFERENCES.md  THREE_LINE_ESIPS_PLAN.md
aegisops-agent/: DATACARD.md  Makefile  OPERATIONS.md  POC_VALIDATION.md  README.md  SOW.md  SPEC.md  pyproject.toml
aegisops-agent/.github/: pull_request_template.md
aegisops-agent/.github/workflows/: ci.yml  eval-mock.yml
aegisops-agent/agent/: acceptance.py  config.py  diagnosis_engine.py  diagnostics.py  main.py  patch_risk_diff.py  poc.py  reporting.py  scenario_runner.py  scenarios.py  schemas.py  triage_queue.py
aegisops-agent/agent/evaluation/: evaluator.py
aegisops-agent/agent/graph/: multi_agent.py  (+2 more)
aegisops-agent/config/: poc-scorecard.json
aegisops-agent/docs/: NEWCOMER_GUIDE.zh-CN.md  application-pack.md  demo-script.md  esips-accenture-mapping.md  incident-to-pr-walkthrough.md
aegisops-agent/reports/: acceptance-checklist.json  acceptance-checklist.md  doctor.json  doctor.md  eval-results.json  eval-summary.md  final-portfolio-report.md  patch-review-queue.md  poc-metrics.json  scenario-matrix.md  scorecard.txt  triage-queue.md
aegisops-agent/scripts/: create_demo_report.py  devops_check.py  docker_build_or_dry_run.py  lint.py  repro.sh  scorecard.py  setup_kind.py
aegisops-agent/tests/: test_acceptance_gate.py  test_agent_workflow.py  test_onboarding_guide.py  test_patch_risk_diff.py  test_poc_scorecard.py  test_reporting_and_diagnostics.py  test_triage_queue.py
(+216 files in other folders)
