[project]
name = "aegisops-agent"
version = "0.1.0"
description = "Agentic DevOps RCA and PR remediation portfolio project"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "apps/demo-api/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
